link nav profile to profile

--- a/Angular/src/app/pages/account/profile/nav-profile/nav-profile.component.html
+++ b/Angular/src/app/pages/account/profile/nav-profile/nav-profile.component.html
@@ -4,10 +4,13 @@
     <p>Here you can see your profile and edit it</p>
   </div>
   <div class="actions">
-    <img class="avatar" [src]="env+'/user-photos/'+profile?.image" />
+    <img class="avatar" *ngIf="image&&image!='null'; else defaultImageTemplate" [src]="image"   alt="profile image"/>
+    <ng-template #defaultImageTemplate>
+      <img  class="avatar" src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Alberto_conversi_profile_pic.jpg"  alt="profile image"/>
+    </ng-template>
     <!-- Environment.apiUrl + "/user-photos/" + imagePath! -->
     <div class="hello">
-      Hello, <span class="name">{{ name?.name }}</span>
+      Hello, <span class="name">{{ name }}</span>
     </div>
     <button [matMenuTriggerFor]="menu" mat-icon-button>
       <mat-icon class="more-icon">arrow_drop_down</mat-icon>
